kubernetes/kustomize/cap/overlays/prod/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cap
  labels:
    app.kubernetes.io/instance: "prod"
    app.kubernetes.io/managed-by: "kustomize"
    environment: "prod"
